--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "crdt-continuous-sequence": "^1.0.0",
+    "fast-diff": "^1.2.0",
     "gun": "^0.2019.930",
     "react": "^16.11.0",
     "react-beautiful-dnd": "^12.0.0",
