--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "crdt-continuous-sequence": "^1.0.0",
     "fast-diff": "^1.2.0",
     "gun": "^0.2019.930",
-    "react": "^16.11.0",
+    "nicks-gun-utils": "^1.0.0",
+    "react": "^16.12.0",
     "react-beautiful-dnd": "^12.0.0",
-    "react-dom": "^16.11.0",
-    "react-hot-loader": "^4.12.16"
+    "react-dom": "^16.12.0",
+    "react-hot-loader": "^4.12.16",
+    "xstate": "^4.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
+    "@babel/preset-modules": "^0.1.1",
     "@babel/preset-react": "^7.7.0",
     "@hot-loader/react-dom": "^16.11.0+4.12.16",
     "babel-loader": "^8.0.6",
